[package]
name = "tx-iterator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
futures = "0.3"
itertools = "0.10"
log = "0.4"
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "devnet" }
tokio = { version = "1.20", features = ["macros"] }
tokio-postgres = "0.7"
warp = "0.3"
