[package]
name = "tx-puller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
crossbeam-channel = "0.5"
db = { path = "../db" }
dotenv = "0.15"
env_logger = "0.9"
fastbloom-rs = "0.3"
futures = "0.3"
log = "0.4"
misc = { path = "../misc" }
rpc = { path = "../rpc" }
serde = "1.0"
tokio = { version = "1.20", features = ["macros"] }
tokio-postgres = "0.7"
warp = "0.3"
